--- a/index.html
+++ b/index.html
@@ -1,65 +1,27 @@
 <!DOCTYPE html>
-
 <html lang="en-us">
-
 <head>
   <meta charset="UTF-8">
-  <title>Shirley_Quintana_Bio</title>
-
+  <title>Shirley Quintana Bio</title>
 </head>
 
 <body>
-    <h1>Shirley</h1>
-    <img src='https://               '
-        alt='TBD a description'>
-    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
-        Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, 
-        when an unknown printer took a galley of type and scrambled it to make a type
-        specimen book. It has survived not only five centuries, but also the leap into 
-        electronic typesetting, remaining essentially unchanged. It was popularised in 
-        the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, 
-        and more recently with desktop publishing software like Aldus PageMaker including 
-        versions of Lorem Ipsum.
+
+  <h1>Shirley Quintana</h1>
+
+  <!-- <img src="sunflowers_in_denver.jpg" alt="A Picture of Sunflowers in Denver" width="80%"> -->
+
+  <p>I am an Internal Audit Manager with CISA, CIA, and CFE certifications and a degree in Finance.  I have experience in a variety of industries most recently in asset management and title and escrow insurance.  In the first half of 2019, I managed six audit teams concurrently bringing all the audits to successful and timely completion. Four of the audits we completed used data analytics to evaluate populations of data for certain attributes. Over the past several years I have discovered a passion for using data analytics for testing and enjoy figuring out the varied ways to use tools to evaluate full populations of data to provide better assurance to business management.  I am increasing my skill sets by attending the Data Analytics BootCamp at DU focusing on Python, Pandas, Matplotlib, SQL, HTML, and Tableau skills to analyze both structured and unstructured data.   I would love to join an internal audit department that is focusing on problem-solving for the organization and is considered a valuable resource for the company. </p>
+  
+
+  <ul>
+    <li><strong>Email:</strong> <a href="#">quintanashirl@gmail.com</a></li>
+    <li><strong>Github:</strong> <a href="#">https://github.com/Shirl16</a></li>
+    <li><strong>LinkedIn:</strong> <a href="#">https://www.linkedin.com/in/shirleyquintanacisa/</a></li>
+  </ul>
 
 
-    </p>
-
-    <p>ANOTHER PARAGRAPH</p>
-
-
-    <ul>
-        <li> email: <a href='mailto:quintanashirl@gmail.com'>
-
-                    </a>
-                    <a href='TBD'>
-
-                    </a>
-        </li>
-
-    </ul>
-
-
-<nav>
-        <table>
-                <thead>
-                    <tr>
-                        <th>
-                            Favorite Movie Title
-                        </th>
-                        
-                    </tr>
-                    
-                </thead>
-        </table>
-
-
-
-</nav>
 
 </body>
-
-
-
-
 
 </html>
