--- a/index.html
+++ b/index.html
@@ -1,27 +1,43 @@
-<!DOCTYPE html>
-<html lang="en-us">
-<head>
-  <meta charset="UTF-8">
-  <title>Shirley Quintana Bio</title>
-</head>
+<!-- ## practice html for personal webpage -->
 
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <title>S_Quintana_Bio</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+</head>
 <body>
 
+<div class="jumbotron text-center">
   <h1>Shirley Quintana</h1>
-
-  <!-- <img src="sunflowers_in_denver.jpg" alt="A Picture of Sunflowers in Denver" width="80%"> -->
-
-  <p>I am an Internal Audit Manager with CISA, CIA, and CFE certifications and a degree in Finance.  I have experience in a variety of industries most recently in asset management and title and escrow insurance.  In the first half of 2019, I managed six audit teams concurrently bringing all the audits to successful and timely completion. Four of the audits we completed used data analytics to evaluate populations of data for certain attributes. Over the past several years I have discovered a passion for using data analytics for testing and enjoy figuring out the varied ways to use tools to evaluate full populations of data to provide better assurance to business management.  I am increasing my skill sets by attending the Data Analytics BootCamp at DU focusing on Python, Pandas, Matplotlib, SQL, HTML, and Tableau skills to analyze both structured and unstructured data.   I would love to join an internal audit department that is focusing on problem-solving for the organization and is considered a valuable resource for the company. </p>
+  <p>Personal Webpage</p> 
+</div>
   
-
-  <ul>
-    <li><strong>Email:</strong> <a href="#">quintanashirl@gmail.com</a></li>
-    <li><strong>Github:</strong> <a href="#">https://github.com/Shirl16</a></li>
-    <li><strong>LinkedIn:</strong> <a href="#">https://www.linkedin.com/in/shirleyquintanacisa/</a></li>
-  </ul>
-
-
+<div class="container">
+  <div class="row">
+    <div class="col-sm-8">
+      <h3>Contact Information</h3>
+      <ul>
+        <li><strong>Email:</strong> <a href="#">quintanashirl@gmail.com</a></li>
+        <li><strong>Github:</strong> <a href="#">https://github.com/Shirl16</a></li>
+        <li><strong>LinkedIn:</strong> <a href="#">https://www.linkedin.com/in/shirleyquintanacisa/</a></li>
+      </ul>
+      
+    </div>
+    
+    <div class="col-sm-12">
+      <h3>A little bit about me</h3>        
+      <p>I am an Internal Audit Manager with CISA, CIA, and CFE certifications and a degree in Finance.  I have experience in a variety of industries most recently in asset management and title and escrow insurance.  In the first half of 2019, I managed six audit teams concurrently bringing all the audits to successful and timely completion. Four of the audits we completed used data analytics to evaluate populations of data for certain attributes. Over the past several years I have discovered a passion for using data analytics for testing and enjoy figuring out the varied ways to use tools to evaluate full populations of data to provide better assurance to business management.  I am increasing my skill sets by attending the Data Analytics BootCamp at DU focusing on Python, Pandas, Matplotlib, SQL, HTML, and Tableau skills to analyze both structured and unstructured data.   I would love to join an internal audit department that is focusing on problem-solving for the organization and is considered a valuable resource for the company.</p>
+      <!-- <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris...</p> -->
+    </div>
+  </div>
+</div>
 
 </body>
-
 </html>
